--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: gigabuck
 description: Web App Security Musings
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/2086323?v=3&s=460
+avatar:
+https://avatars3.githubusercontent.com/u/2086323?v=3&u=07691429e7e2b5b1fa65a9085966c1b04270d88f&s=140
 
 #
 # Flags below are optional
