trying to update 2

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ https://avatars3.githubusercontent.com/u/2086323?v=3&u=07691429e7e2b5b1fa65a9085
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: blah@blah.blah
   facebook:
   flickr:
   github: gigabuck
