--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: gigabuck
 
 # Short bio or description (displayed in the header)
-description: Web App Security Musings
+description: App Security Mischief
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/2086323?v=3&u=07691429e7e2b5b1fa65a9085966c1b04270d88f&s=140
